--- a/Peliculas/movie98.html
+++ b/Peliculas/movie98.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>War</title>
+    <title>War 2</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <style>
@@ -13,7 +13,7 @@
             padding: 0;
         }
         body {
-            background: url('https://image.tmdb.org/t/p/originalnull') no-repeat center center fixed;
+            background: url('https://image.tmdb.org/t/p/original/qQH65hIB4qmc4aP40DxaoEGC2Ea.jpg') no-repeat center center fixed;
             background-size: cover;
         }
         .overlay {
@@ -49,26 +49,26 @@
     <div class="overlay min-h-screen">
         <div class="max-w-4xl mx-auto p-4 pb-24">
             <div class="rounded-md overflow-hidden relative aspect-video bg-black">
-                <iframe class="w-full h-full" src="" data-alternativo="" title="" frameborder="0" allowfullscreen></iframe>
+                <iframe class="w-full h-full" src="https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9ydW1ibGUuY29tL2hscy12b2QvNnkzczA4L3BsYXlsaXN0Lm0zdTg/dT0wJmI9MA==&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvcVFINjVoSUI0cW1jNGFQNDBEeGFvRUdDMkVhLmpwZw==&title=V2FyIDIgKDIwMjUp" data-alternativo="https://hglink.to/e/q91wqocs0281" title="" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="flex space-x-4 mt-4 bg-[#1a1a1a] p-4 rounded-md items-center">
                 <div class="flex items-center justify-center w-[110px] h-[160px] flex-shrink-0">
-                    <img alt="War" class="rounded-lg w-full h-full object-cover" src="https://image.tmdb.org/t/p/originalnull" />
+                    <img alt="War 2" class="rounded-lg w-full h-full object-cover" src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/tHUEGjexjpTDO3ggla9JQ6CojxU.jpg" />
                 </div>
                 <div class="flex-1">
-                    <h3 class="text-xl font-semibold">War</h3>
+                    <h3 class="text-xl font-semibold">War 2</h3>
                     <p class="text-gray-300 italic text-sm">Publicado por: Lz-1</p>
                     <div class="flex flex-wrap items-center space-x-2 text-xs text-gray-400 mt-1">
-                        <span>Costa Rica</span>
-                        <span>Duración: 4 Minutos</span>
-                        <span>Año: 2023</span>
+                        <span>India</span>
+                        <span>Duración: 173 Minutos</span>
+                        <span>Año: 2025</span>
                     </div>
                     <div class="flex items-center mt-3 space-x-3">
-                        <div id="rating-value" class="bg-[#2a2a2a] rounded-md px-3 py-1 text-lg font-semibold text-white">9.4</div>
+                        <div id="rating-value" class="bg-[#2a2a2a] rounded-md px-3 py-1 text-lg font-semibold text-white">5.6</div>
                         <div id="star-container" class="flex space-x-1 text-yellow-400 text-lg"></div>
                     </div>
                     <div class="flex space-x-6 text-xs text-gray-400 mt-3">
-                        <span>Drama</span>
+                        <span>Acción, Aventura, Suspense</span>
                     </div>
                 </div>
             </div>
@@ -86,12 +86,12 @@
             </div>
             <div id="sinopsis" class="mt-4 bg-[#1a1a1a] p-4 rounded-md">
                 <h4 class="text-white text-lg font-semibold mb-2">Sinopsis</h4>
-                <p class="text-gray-300 text-sm leading-relaxed"></p>
+                <p class="text-gray-300 text-sm leading-relaxed">Desde las sombras más densas, la India desata a su arma más letal: el superagente Vikram. Un oficial de las Unidades Especiales, imparable, indestructible, implacable. Cuando entra en escena, el peligro es inevitable. Un Terminator atormentado por sus propios demonios, con un único propósito: volarle la cabeza a Kabir. Dos titanes. Un destino. Una persecución sin límites. El mundo entero se convierte en su sangriento y despiadado campo de batalla. En su camino, decisiones imposibles, donde cada elección tiene un precio muy alto. Esta no es solo una guerra. Es una explosión de acción brutal y emociones que desgarran el alma</p>
             </div>
         </div>
     </div>
     <script>
-  var rating = 9.4;
+  var rating = 5.6;
   var starContainer = document.getElementById('star-container');
   var fullStars = Math.floor(rating / 2);
   var halfStar = rating % 2 >= 1;
@@ -154,4 +154,3 @@
     </nav>
 </body>
 </html>
-
