--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,13 +31,13 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- War -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- War 2 -->
 <li>
   <a href="../Peliculas/movie98.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
-  src="https://image.tmdb.org/t/p/originalnull" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
-    <span class="hidden">War 2023</span>
-    <span class="hidden"></span>
+  src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/tHUEGjexjpTDO3ggla9JQ6CojxU.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">War 2 2025</span>
+    <span class="hidden">Desde las sombras más densas, la India desata a su arma más letal: el superagente Vikram. Un oficial de las Unidades Especiales, imparable, indestructible, implacable. Cuando entra en escena, el peligro es inevitable. Un Terminator atormentado por sus propios demonios, con un único propósito: volarle la cabeza a Kabir. Dos titanes. Un destino. Una persecución sin límites. El mundo entero se convierte en su sangriento y despiadado campo de batalla. En su camino, decisiones imposibles, donde cada elección tiene un precio muy alto. Esta no es solo una guerra. Es una explosión de acción brutal y emociones que desgarran el alma</span>
   </a>
 </li>
 <!--FIN--><!-- Hiroshima -->
