Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- War 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- MH370: El avion que desaparecio -->
+<li>
+  <a href="../Series/serie119.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/lVyBjky45Yqay2G3DaN6pkFCaUH.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">MH370: El avión que desapareció 2023</span>
+    <span class="hidden">En 2014, un avión de Malaysia Airlines que llevaba 239 personas a bordo desapareció de los radares. Esta docuserie explora la misteriosa historia de ese vuelo, el MH370.</span>
+  </a>
+</li>
+<!--FIN--><!-- War 2 -->
 <li>
   <a href="../Peliculas/movie98.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
