--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- War 2-->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Brigada A: Los Magnificos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie99.html">
+    <img src="https://image.tmdb.org/t/p/original/q3VtPDRgQs56PNAEr2qnMAQQVpc.jpg" alt="Brigada A: Los Magníficos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Brigada A: Los Magníficos</div>
+  <div class="text-xs text-white/70">2010</div>
+</article><!-- War 2-->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie98.html">
     <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/tHUEGjexjpTDO3ggla9JQ6CojxU.jpg" alt="War 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
