Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- MH370: El avion que desaparecio -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Brigada A: Los Magnificos -->
+<li>
+  <a href="../Peliculas/movie99.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/q3VtPDRgQs56PNAEr2qnMAQQVpc.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Brigada A: Los Magníficos 2010</span>
+    <span class="hidden">Adaptación al cine de la popular serie de televisión. El Coronel Hannibal Smith (Liam Neeson) es el líder de "El Equipo A", una unidad especial de veteranos de la guerra de Iraq, antiguos soldados de las Fuerzas Especiales que fueron acusados de un crimen que no cometieron. Hannibal es un experto planificador de misiones peligrosas que requieren un equipo de hombres extraordinariamente competentes y preparados: Templenton 'Fenix (Face)' Peck (Bradley Cooper) puede conseguir cualquier cosa para hacer posibles las poco ortodoxas actividades del grupo; M. A. Barracus (Quinton 'Rampage' Jackson) es el conductor del equipo, y Murdock (Charlto Copley) es un piloto excepcional y un loco acreditado. La capitana Charisa (Jessica Biel), una antigua novia de Fenix, los persigue por un crimen que no cometieron. Finalmente, Lynch (Patrick Wilson) es un misterioso agente de la CIA.</span>
+  </a>
+</li>
+<!--FIN--><!-- MH370: El avion que desaparecio -->
 <li>
   <a href="../Series/serie119.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
