--- a/Categorias/western/index.html
+++ b/Categorias/western/index.html
@@ -51,7 +51,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
   <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Sin Lugar para los Debiles -->
+    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El Siete Machos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie100.html">
+    <img src="https://image.tmdb.org/t/p/original/zdV9YavsAOMURBdhNmFU88NGgJj.jpg" alt="El Siete Machos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El Siete Machos</div>
+  <div class="text-xs text-white/70">1951</div>
+</article><!-- Sin Lugar para los Debiles -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula994.html">
     <img src="https://image.tmdb.org/t/p/original/wvi8k5fqjvVqTD573YX9eRLRo0F.jpg" alt="Sin Lugar para los Débiles" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
