Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Brigada A: Los Magnificos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Siete Machos -->
+<li>
+  <a href="../Peliculas/movie100.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zdV9YavsAOMURBdhNmFU88NGgJj.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El Siete Machos 1951</span>
+    <span class="hidden">Rosario, la sobrina del ranchero, regresa al rancho después de diez años de ausencia. Agarra a Margarito, un trabajador del rancho, que es inmediatamente herido por ella. Rosario es rescatada de un caballo fuera de control por El Siete Machos, un proscrito a la Robin Hood que roba a los ricos y da a los pobres. También sucede ser el hermano gemelo de Margarito, sin que él sepa. La confusión entre Margarito y El Siete Machos genera grandes situaciones cómicas en la película.</span>
+  </a>
+</li>
+<!--FIN--><!-- Brigada A: Los Magnificos -->
 <li>
   <a href="../Peliculas/movie99.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
