--- a/Categorias/suspense/index.html
+++ b/Categorias/suspense/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- War 2-->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El Senor Fotografo -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie101.html">
+    <img src="https://image.tmdb.org/t/p/original/rGmP5zYLDi7fokr1ndIomoqDVDl.jpg" alt="El Señor Fotógrafo" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El Señor Fotógrafo</div>
+  <div class="text-xs text-white/70">1953</div>
+</article><!-- War 2-->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie98.html">
     <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/tHUEGjexjpTDO3ggla9JQ6CojxU.jpg" alt="War 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
