Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Siete Machos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Senor Fotografo -->
+<li>
+  <a href="../Peliculas/movie101.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/rGmP5zYLDi7fokr1ndIomoqDVDl.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El Señor Fotógrafo 1953</span>
+    <span class="hidden">Cantinflas, fotógrafo ambulante, es capturado por unos gángsters cuando trataba de tomar unas flores para su novia, Consuelo. Los gángsters le han confundido con el ayudante del doctor Penongo, científico que ha descubierto la fórmula de una nueva bomba atómica. Mientras tanto, Penongo ha sufrido un accidente de automóvil y ha perdido la memoria...</span>
+  </a>
+</li>
+<!--FIN--><!-- El Siete Machos -->
 <li>
   <a href="../Peliculas/movie100.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
