--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El Senor Fotografo -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Si yo fuera diputado -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie102.html">
+    <img src="https://image.tmdb.org/t/p/original/37ANYH2xOKsb6KHwYpVExmXXAXc.jpg" alt="Si yo fuera diputado" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Si yo fuera diputado</div>
+  <div class="text-xs text-white/70">1952</div>
+</article><!-- El Senor Fotografo -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie101.html">
     <img src="https://image.tmdb.org/t/p/original/rGmP5zYLDi7fokr1ndIomoqDVDl.jpg" alt="El Señor Fotógrafo" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
