--- a/Categorias/drama/index.html
+++ b/Categorias/drama/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- War 2-->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Caballero a la Medida -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie104.html">
+    <img src="https://image.tmdb.org/t/p/original/6BL6X90watifbuaPXMDpbt7tsG5.jpg" alt="Caballero a la Medida" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Caballero a la Medida</div>
+  <div class="text-xs text-white/70">1954</div>
+</article><!-- War 2-->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie98.html">
     <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/tHUEGjexjpTDO3ggla9JQ6CojxU.jpg" alt="War 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
