Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El padrecito -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Caballero a la Medida -->
+<li>
+  <a href="../Peliculas/movie104.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/6BL6X90watifbuaPXMDpbt7tsG5.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Caballero a la Medida 1954</span>
+    <span class="hidden">Cantinflas trabaja como modelo de smokings en una prestigiosa tienda; su labor consiste en usar el smoking en la calle junto con un letrero publicitario en sus espaldas. El uso del smoking le permite acceder a lugares exclusivos y encontrarse con gente importante. Durante este tiempo, Cantinflas es mánager de un boxeador amateur, asistente de una atractiva enfermera y ocasionalmente asiste a un sacerdote en la iglesia y en el orfanato. Sin embargo, un día Cantinflas, mientras usaba el smoking, se encuentra con un hombre rico, el cual erróneamente cree que Cantinflas es también millonario.</span>
+  </a>
+</li>
+<!--FIN--><!-- El padrecito -->
 <li>
   <a href="../Peliculas/movie103.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
