--- a/Plataforma/sony/index.html
+++ b/Plataforma/sony/index.html
@@ -216,7 +216,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Caballero a la Medida -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Abajo el telon -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie105.html">
+    <img src="https://image.tmdb.org/t/p/original/tGxZyNZlM8nIXDuMCtNXW6i9A0Y.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Abajo el telón</div>
+  <div class="text-xs text-white/70">1955</div>
+</article><!-- Caballero a la Medida -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie104.html">
     <img src="https://image.tmdb.org/t/p/original/6BL6X90watifbuaPXMDpbt7tsG5.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
