Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Caballero a la Medida -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Abajo el telon -->
+<li>
+  <a href="../Peliculas/movie105.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/tGxZyNZlM8nIXDuMCtNXW6i9A0Y.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Abajo el telón 1955</span>
+    <span class="hidden">Cantinflas, dueña de un negocio de limpieza, limpia las ventanas de la casa de una famosa actriz francesa. Mientras realiza su trabajo observa cómo un hombre roba uno de los famosos collares de actriz, pero sólo puede ver su espalda.</span>
+  </a>
+</li>
+<!--FIN--><!-- Caballero a la Medida -->
 <li>
   <a href="../Peliculas/movie104.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
