--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Abajo el telon -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La vuelta al mundo en 80 dias -->
+<li>
+  <a href="../Peliculas/movie106.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/5sOJTtPJfOT74sSTABd3E0K5Zmy.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La vuelta al mundo en 80 días 1956</span>
+    <span class="hidden">Adaptación de la novela homónima de Julio Verne. Un ladrón ha robado 55.000 libras del banco de Inglaterra. Todos creen que ha sido Phileas Fogg, un auténtico caballero inglés, que ha hecho una apuesta con sus compañeros de club, asegurando que es capaz de dar la vuelta al mundo en 80 días.</span>
+  </a>
+</li>
+<!--FIN--><!-- Abajo el telon -->
 <li>
   <a href="../Peliculas/movie105.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
