--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La vuelta al mundo en 80 dias -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La Mascara -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie107.html">
+    <img src="https://image.tmdb.org/t/p/original/xbbXp9px4o8Oe7IbGd0yIbla8mZ.jpg" alt="La Máscara" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">La Máscara</div>
+  <div class="text-xs text-white/70">1994</div>
+</article><!-- La vuelta al mundo en 80 dias -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie106.html">
     <img src="https://image.tmdb.org/t/p/original/5sOJTtPJfOT74sSTABd3E0K5Zmy.jpg" alt="La vuelta al mundo en 80 días" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
