Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La vuelta al mundo en 80 dias -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Mascara -->
+<li>
+  <a href="../Peliculas/movie107.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/xbbXp9px4o8Oe7IbGd0yIbla8mZ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La Máscara 1994</span>
+    <span class="hidden">Cuando el tímido empleado bancario, Stanley Ipkiss, descubre una máscara mágica que contiene el espíritu del dios nórdico Loki, su vida cambia por completo.</span>
+  </a>
+</li>
+<!--FIN--><!-- La vuelta al mundo en 80 dias -->
 <li>
   <a href="../Peliculas/movie106.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
