--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Mascara -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Mascara 2: El hijo de la mascara -->
+<li>
+  <a href="../Peliculas/movie108.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/pLR2dgaNuHVJcS5mgIHfpRzgYAB.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La Máscara 2: El hijo de la máscara 2005</span>
+    <span class="hidden">Diez años después de perturbar la vida de un hombre ingenuo, la famosa máscara de Loki cae en manos de un joven padre: cuando el caricaturista Tim Avery supera su temor a la paternidad tras el nacimiento de su primer hijo, descubre que el niño ha nacido con los poderes de la máscara. La situación se complica cuando el celoso perro de la familia se enfrenta al niño por el control de la máscara. Lo que todos ignoran es que Loki (Alan Cumming), el malvado dios escandinavo, busca la máscara y está dispuesto a todo con tal de recuperarla.</span>
+  </a>
+</li>
+<!--FIN--><!-- La Mascara -->
 <li>
   <a href="../Peliculas/movie107.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
