Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Mascara 2: El hijo de la mascara -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- ¡Feliz Halloween, Scooby Doo! -->
+<li>
+  <a href="../Peliculas/movie109.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/vDKCG4Qt8Tm0ot5zOVSVwZRR3Yc.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">¡Feliz Halloween, Scooby Doo! 2020</span>
+    <span class="hidden">Con toda clase de monstruos falsos y montones de caramelos por doquier, Halloween es un paraíso para los amantes de la comida. Este año, sin embargo, su fiesta por excelencia se transforma en una pesadilla a causa de un huerto de calabazas que ha sido infectado por un extraño flujo tóxico, generando un ejército imparable de «jack-o-lanterns» que arrasan todo lo que encuentran a su paso. Sólo Scooby-Doo y su grupo de amigos podrán resolver este misterioso caso y salvar Caleta Crystal.</span>
+  </a>
+</li>
+<!--FIN--><!-- La Mascara 2: El hijo de la mascara -->
 <li>
   <a href="../Peliculas/movie108.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
