Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- ¡Feliz Halloween, Scooby Doo! -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Guason -->
+<li>
+  <a href="../Peliculas/movie110.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/2cta3k9kgsgweUTY2LvMSFjuB6e.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Guasón 2019</span>
+    <span class="hidden">Arthur Fleck es un hombre ignorado por la sociedad, cuya motivación en la vida es hacer reír. Pero una serie de trágicos acontecimientos le llevarán a ver el mundo de otra forma.</span>
+  </a>
+</li>
+<!--FIN--><!-- ¡Feliz Halloween, Scooby Doo! -->
 <li>
   <a href="../Peliculas/movie109.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
