Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Guason -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Guason 2: Folie a Deux -->
+<li>
+  <a href="../Peliculas/movie111.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/i90gQD1ogdrX2EE2bYCtYSuqjRV.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Guasón 2: Folie à Deux 2024</span>
+    <span class="hidden">El fracasado comediante Arthur Fleck conoce al amor de su vida, Harley Quinn, mientras está encarcelado en el Hospital Estatal de Arkham. Tras su liberación, los dos se embarcan en una desventura romántica condenada al fracaso.</span>
+  </a>
+</li>
+<!--FIN--><!-- Guason -->
 <li>
   <a href="../Peliculas/movie110.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
