Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Guason 2: Folie a Deux -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Guardianes de altamar -->
+<li>
+  <a href="../Peliculas/movie112.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/e6hXSlsnAShEJ7M63wweyDbhv0r.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Guardianes de altamar 2006</span>
+    <span class="hidden">Tras perder a su compañero y a otros miembros de su equipo durante un accidentado rescate en alta mar, el subteniente Ben Randall (Kevin Costner), un legendario miembro de la Guardia Costera norteamericana, es enviado como instructor a una academia de élite de rescatadores de la Guardia Costera. Al principio chocará con Jake Fischer (Ashton Kutcher), un joven díscolo y presuntuoso destinado a ser el mejor del curso.</span>
+  </a>
+</li>
+<!--FIN--><!-- Guason 2: Folie a Deux -->
 <li>
   <a href="../Peliculas/movie111.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
