--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La Mascara 2: El hijo de la mascara -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Un puente a Terabithia -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie113.html">
+    <img src="https://image.tmdb.org/t/p/original/mL5Tpzxqr9hb5zwbnN3DRzVKyuY.jpg" alt="Un puente a Terabithia" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Un puente a Terabithia</div>
+  <div class="text-xs text-white/70">2007</div>
+</article><!-- La Mascara 2: El hijo de la mascara -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie108.html">
     <img src="https://image.tmdb.org/t/p/original/pLR2dgaNuHVJcS5mgIHfpRzgYAB.jpg" alt="La Máscara 2: El hijo de la máscara" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
