--- a/Categorias/drama/index.html
+++ b/Categorias/drama/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Guardianes de altamar -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Un puente a Terabithia -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie113.html">
+    <img src="https://image.tmdb.org/t/p/original/mL5Tpzxqr9hb5zwbnN3DRzVKyuY.jpg" alt="Un puente a Terabithia" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Un puente a Terabithia</div>
+  <div class="text-xs text-white/70">2007</div>
+</article><!-- Guardianes de altamar -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie112.html">
     <img src="https://image.tmdb.org/t/p/original/e6hXSlsnAShEJ7M63wweyDbhv0r.jpg" alt="Guardianes de altamar" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
