Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Guardianes de altamar -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un puente a Terabithia -->
+<li>
+  <a href="../Peliculas/movie113.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/mL5Tpzxqr9hb5zwbnN3DRzVKyuY.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Un puente a Terabithia 2007</span>
+    <span class="hidden">Jess Aarons, un chico que se siente extraño tanto en el colegio como en su propia casa, se ha entrenado durante todo el verano para correr una carrera; pero llega al colegio Leslie Burke y le gana. A pesar de ello, pronto se hacen amigos. Leslie, aficionada a contar fantásticas y mágicas historias, le abre a Jess las puertas de un mundo dominado por la imaginación. A Jess le gusta dibujar, pero nunca había compartido esa afición con nadie. Los dos crean el reino secreto de Terabithia, un lugar mágico cuya entrada sólo ellos conocen. Allí reinan, luchan contra el Maestro Oscuro y sus criaturas y trazan planes para vengarse de los compañeros prepotentes del colegio.</span>
+  </a>
+</li>
+<!--FIN--><!-- Guardianes de altamar -->
 <li>
   <a href="../Peliculas/movie112.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
