--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un puente a Terabithia -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La entrega inmediata -->
+<li>
+  <a href="../Peliculas/movie114.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/mFoiuMB6chsjfMfMPWZIRrHDvOw.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La entrega inmediata 2012</span>
+    <span class="hidden">“Sin frenos” nos relatará la historia Wilee (Joseph Gordon-Levitt), un mensajero de Nueva York. Esquivar coches a toda velocidad, taxistas enloquecidos y ocho millones de peatones malhumorados forma parte de su día a día, pero él es el mejor entre los ágiles y agresivos mensajeros en bicicleta de Nueva York. Hay que ser de una raza especial, con una mezcla a partes iguales de pericia y chifladura, para conducir una fixie –bicicleta superligera, sin cambios ni frenos— arriesgándose a convertirse en una mancha más sobre el pavimento cada vez que se mueve entre el tráfico de la ciudad. Pero un tipo que está acostumbrado a arriesgar su vida continuamente, está a punto de enfrentarse a peligros aún mayores cuando su última entrega del día —lo que en principio parecía un servicio premium rutinario— acaba convirtiéndose en una persecución a vida o muerte a través de las calles de Manhattan</span>
+  </a>
+</li>
+<!--FIN--><!-- Un puente a Terabithia -->
 <li>
   <a href="../Peliculas/movie113.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
