--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Un puente a Terabithia -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Gran Turismo: De jugador a corredor -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie116.html">
+    <img src="https://image.tmdb.org/t/p/original/tVj5dn15iwkMhjU2wIih1yMy5LK.jpg" alt="Gran Turismo: De jugador a corredor" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Gran Turismo: De jugador a corredor</div>
+  <div class="text-xs text-white/70">2023</div>
+</article><!-- Un puente a Terabithia -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie113.html">
     <img src="https://image.tmdb.org/t/p/original/mL5Tpzxqr9hb5zwbnN3DRzVKyuY.jpg" alt="Un puente a Terabithia" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
