Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ciudad de Dios -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Gran Turismo: De jugador a corredor -->
+<li>
+  <a href="../Peliculas/movie116.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/tVj5dn15iwkMhjU2wIih1yMy5LK.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Gran Turismo: De jugador a corredor 2023</span>
+    <span class="hidden">Jann Mardenborough, un habilidoso jugador adolescente de Gran Turismo, logra entrar a una serie de competiciones patrocinadas por Nissan que lo conducirá a convertirse en un auténtico piloto de carreras profesional. Basada en una historia real.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ciudad de Dios -->
 <li>
   <a href="../Peliculas/movie115.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
