--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- ¡Feliz Halloween, Scooby Doo! -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- ¡Patos! -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie117.html">
+    <img src="https://image.tmdb.org/t/p/original/diEeiB2DmZZadHISkg24RO2n0rT.jpg" alt="¡Patos!" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">¡Patos!</div>
+  <div class="text-xs text-white/70">2023</div>
+</article><!-- ¡Feliz Halloween, Scooby Doo! -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie109.html">
     <img src="https://image.tmdb.org/t/p/original/vDKCG4Qt8Tm0ot5zOVSVwZRR3Yc.jpg" alt="¡Feliz Halloween, Scooby Doo!" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
