--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Gran Turismo: De jugador a corredor -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- ¡Patos! -->
+<li>
+  <a href="../Peliculas/movie117.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/diEeiB2DmZZadHISkg24RO2n0rT.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">¡Patos! 2023</span>
+    <span class="hidden">Después de que una familia de patos migratorios aterriza en su estanque con emocionantes historias de lugares remotos, la familia Mallard embarca en un viaje familiar, atravezando la ciudad de Nueva York, con destino a la tropical Jamaica.</span>
+  </a>
+</li>
+<!--FIN--><!-- Gran Turismo: De jugador a corredor -->
 <li>
   <a href="../Peliculas/movie116.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
