Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- ¡Patos! -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Exterminio: La evolucion -->
+<li>
+  <a href="../Peliculas/movie118.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/gc5oHGz2AugoAlnfsmie1I0ZdOM.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Exterminio: La evolución 2025</span>
+    <span class="hidden">Casi tres décadas desde que el virus de la ira escapó de un laboratorio de armas biológicas. Uno de los supervivientes abandona la pequeña isla en una misión hacía el oscuro corazón del continente, descubriendo secretos, maravillas y horrores que han mutado no sólo a los infectados, sino también a otros supervivientes.</span>
+  </a>
+</li>
+<!--FIN--><!-- ¡Patos! -->
 <li>
   <a href="../Peliculas/movie117.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
