Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Trauma -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El laboratorio de Dexter: El viaje de Dexter -->
+<li>
+  <a href="../Peliculas/movie120.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/oiul6dw0tOkPW6EMPsZyLnvTqzA.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El laboratorio de Dexter: El viaje de Dexter 1999</span>
+    <span class="hidden">Después de que Dexter se enfrente a los robots que quieren "destruir el que salvó el futuro", utiliza su máquina del tiempo para ver cómo lo salvó.</span>
+  </a>
+</li>
+<!--FIN--><!-- Trauma -->
 <li>
   <a href="../Peliculas/movie119.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
