Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El laboratorio de Dexter: El viaje de Dexter -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La telarana de Charlotte -->
+<li>
+  <a href="../Peliculas/movie121.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zI6O0Bf3BB3eSxp04Lkz0ficrvm.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La telaraña de Charlotte 2006</span>
+    <span class="hidden">Wilbur es un cerdo de granja al que le aterra la idea de acabar en la mesa. Su amiga Charlotte, una encantadora araña, acude a su rescate.</span>
+  </a>
+</li>
+<!--FIN--><!-- El laboratorio de Dexter: El viaje de Dexter -->
 <li>
   <a href="../Peliculas/movie120.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
